docs: actualizacion rev02

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Cartografía: El Poder de Ver el Mundo</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mi_estilo.css">
 </head>
 <body>
     <header>
@@ -23,25 +23,34 @@
     <main>
         <section id="introduccion">
             <h2>¿Qué es la Cartografía?</h2>
-            <p>La cartografía es la ciencia, el arte y la técnica de hacer mapas. Es una disciplina que combina la geografía, las matemáticas, la informática y el diseño para representar la superficie terrestre o partes de ella en un plano.</p>
-            <p>Desde la antigüedad, los mapas han sido herramientas esenciales para la navegación, la exploración, la planificación y la comprensión de nuestro mundo. Evolucionaron desde simples dibujos hasta complejos sistemas de información geográfica.</p>
+            <p>La cartografía es la ciencia, el arte y la técnica de hacer mapas. Es una disciplina que combina la geografía, las matemáticas, la informática y el diseño para representar la superficie terrestre o partes de ella en un plano. Su objetivo principal es comunicar información espacial de manera clara y comprensible, permitiendo la visualización y análisis de datos geográficos.</p>
+            <p>Desde la antigüedad, los mapas han sido herramientas esenciales para la navegación, la exploración, la planificación y la comprensión de nuestro mundo. Evolucionaron desde simples dibujos hasta complejos sistemas de información geográfica, adaptándose constantemente a las necesidades humanas y a los avances tecnológicos. Hoy en día, la cartografía es fundamental para la gestión de recursos naturales, el urbanismo, la logística y la respuesta a emergencias. Evolucionaron desde simples dibujos hasta complejos sistemas de información geográfica.</p>
         </section>
 
         <section id="historia">
-            <h2>Breve Historia de la Cartografía</h2>
-            <p>La historia de la cartografía es tan antigua como la civilización misma. Los primeros mapas conocidos datan de miles de años atrás, grabados en tablillas de arcilla o pintados en paredes de cuevas. Culturas como la egipcia, griega, romana y china desarrollaron sus propias técnicas cartográficas.</p>
-            <p>El Renacimiento marcó un punto de inflexión con exploradores como <strong>Cristóbal Colón</strong> y <strong>Ferdinand Magellan</strong> que impulsaron la necesidad de mapas más precisos. Figuras como <strong>Gerardus Mercator</strong> revolucionaron la proyección cartográfica.</p>
+            <h2>Historia de la Cartografía</h2>
+            <p>La historia de la cartografía es tan antigua como la civilización misma. Los primeros mapas conocidos datan de miles de años atrás, grabados en tablillas de arcilla o pintados en paredes de cuevas, reflejando la necesidad humana de orientarse y registrar el territorio. Culturas como la egipcia, griega, romana y china desarrollaron sus propias técnicas cartográficas, destacando la contribución de los griegos con conceptos de esfericidad de la Tierra y sistemas de coordenadas. <strong>Ptolomeo</strong>, por ejemplo, fue una figura clave en la antigüedad con su obra "Geographia".</p>
+            <p>El Renacimiento marcó un punto de inflexión decisivo con exploradores como <strong>Cristóbal Colón</strong> y <strong>Ferdinand Magellan</strong>, cuyas grandes expediciones impulsaron drásticamente la necesidad de mapas más precisos y representaciones del mundo a una escala global. Este periodo vio el auge de la imprenta, que facilitó la difusión de mapas. Figuras como <strong>Gerardus Mercator</strong> revolucionaron la proyección cartográfica con su proyección cilíndrica que, aunque distorsiona las áreas cerca de los polos, es excepcionalmente útil para la navegación al mantener las líneas de rumbo constantes. Posteriormente, la invención del telescopio, el cronómetro y el desarrollo de la trigonometría permitieron mediciones más exactas y la elaboración de mapas más detallados y fiables, culminando en el siglo XX con la fotogrametría aérea, la teledetección y finalmente, la era de los Sistemas de Información Geográfica (SIG).</p>
         </section>
 
         <section id="elementos">
-            <h2>Elementos Clave de un Mapa</h2>
+            <h2>Elementos fundamentales de un Mapa</h2>
             <ul>
-                <li>Título: Indica el tema o propósito del mapa.</li>
-                <li>Leyenda: Explica los símbolos y colores utilizados en el mapa.</li>
-                <li>Escala: Muestra la relación entre la distancia en el mapa y la distancia real.</li>
-                <li>Orientación: Generalmente indica el Norte para ubicar las direcciones.</li>
-                <li>Coordenadas: Latitud y longitud para ubicar puntos exactos.</li>
-                <li>Proyección: El método utilizado para representar una superficie esférica en un plano.</li>
+                <li><strong>Título:</strong> Indica el tema o propósito del mapa.</li>
+                <li><strong>Leyenda:</strong> Explica los símbolos y colores utilizados en el mapa.</li>
+                <li><strong>Escala:</strong> Muestra la relación entre la distancia en el mapa y la distancia real.</li>
+                <li><strong>Orientación:</strong> Generalmente indica el Norte para ubicar las direcciones.</li>
+                <li><strong>Coordenadas:</strong> Latitud y longitud para ubicar puntos exactos.</li>
+                <li><strong>Proyección:</strong> El método utilizado para representar una superficie esférica en un plano.</li>
+                <li><strong>Marco o Borde:</strong> Delimita el área geográfica representada.</li>
+                <li><strong>Etiquetas y Topónimos:</strong> Nombres de lugares geográficos para identificar elementos.</li>
+                <li><strong>Fuente de Datos:</strong> Indica la procedencia de la información para evaluar su fiabilidad.</li>
+                <li><strong>Fecha de Creación/Actualización:</strong> Muestra la vigencia de los datos del mapa.</li>
+                <li><strong>Autor/Organización Creadora:</strong> Identifica a los responsables de la elaboración del mapa.</li>
+                <li><strong>Grícula o Retícula:</strong> Red de líneas (coordenadas) para una localización precisa.</li>
+                <li><strong>Insertos o Mapas Anexos:</strong> Mapas más pequeños que muestran detalles o contextos adicionales.</li>
+                <li><strong>Curvas de Nivel (Isolíneas):</strong> En mapas topográficos, conectan puntos de igual altitud para representar el relieve.</li>
+                <li><strong>Unidades de Medida:</strong> Especifican las unidades de las magnitudes numéricas (ej. km, metros).</li>
             </ul>
         </section>
 
@@ -50,26 +59,91 @@
             <div class="map-types">
                 <div class="map-type-item">
                     <h3>Mapas Topográficos</h3>
-                    <p>Muestran las características físicas de la superficie terrestre, incluyendo elevación (curvas de nivel), ríos, lagos y vegetación.</p>
+				<figure>
+                    <img src="./img/mapa_topografico.jfif" alt="Mapas Topográficos">
+                </figure>
+					<p>Muestran las características físicas y del relieve de la superficie terrestre con gran detalle, incluyendo elevación (representada mediante curvas de nivel o isolíneas de igual altitud), ríos, lagos, mares, glaciares, y vegetación. Son esenciales para actividades como el montañismo, la ingeniería civil y la planificación de infraestructura.</p>
                 </div>
                 <div class="map-type-item">
                     <h3>Mapas Temáticos</h3>
-                    <p>Representan la distribución de un tema específico, como la población, el clima, la economía o la geología.</p>
+				<figure>
+                    <img src="./img/mapa_tematico.jfif" alt="Mapas Temáticos">
+					</figure>
+					<p>Representan la distribución espacial de un tema o fenómeno específico, destacando patrones o concentraciones. Pueden mostrar la distribución de la población, el clima, la economía, la geología, la densidad de especies o los resultados electorales, utilizando diversas simbologías para expresar la información.</p>
                 </div>
                 <div class="map-type-item">
                     <h3>Mapas Políticos</h3>
-                    <p>Delimitan fronteras de países, estados, ciudades y otras divisiones administrativas.</p>
+				<figure>
+                    <img src="./img/mapa_politico.jpg" alt="Mapas Políticos">
+				</figure>
+					<p>Delimitan las fronteras de países, estados, provincias, ciudades y otras divisiones administrativas o jurisdiccionales. Su principal propósito es mostrar la organización territorial y las relaciones geopolíticas. Son ampliamente utilizados en la educación y para la navegación general a nivel macro.</p>
+                </div>
+                <div class="map-type-item">
+                    <h3>Mapas de Carreteras/Viales</h3>
+				<figure>
+                    <img src="./img/mapa_carreteras_viales.jfif" alt="Mapas de Carreteras/Viales">
+				</figure>
+					<p>Diseñados específicamente para la navegación automovilística, mostrando la red de carreteras (autopistas, principales, secundarias), ciudades, puntos de interés relevantes para viajeros, y distancias. Fundamentales para planificar rutas.</p>
+                </div>
+                <div class="map-type-item">
+                    <h3>Planos Urbanos / Mapas de Ciudad</h3>
+				<figure>
+                    <img src="./img/mapa_planourbano_ciudad.jpg" alt="Planos Urbanos / Mapas de Ciudad">
+				</figure>
+					<p>Representaciones detalladas de áreas urbanas, mostrando calles, avenidas, plazas, parques, edificios significativos, y a menudo información útil para el visitante, como ubicaciones de hoteles, museos y transporte público.</p>
+                </div>
+                 <div class="map-type-item">
+                    <h3>Mapas Físicos</h3>
+				<figure>
+                    <img src="./img/mapa_fisico.jfif" alt="Mapas Físicos">
+				</figure>
+					<p>Similar a los topográficos, pero con un enfoque más general en las características naturales de la Tierra (montañas, valles, ríos, desiertos), utilizando a menudo colores para representar rangos de elevación y profundidades.</p>
+                </div>
+                 <div class="map-type-item">
+                    <h3>Mapas Históricos</h3>
+				<figure>
+                    <img src="./img/mapa_historico.jfif" alt="Mapas Históricos">
+				</figure>
+					<p>Representan eventos, condiciones o fronteras políticas de épocas pasadas. Permiten visualizar cómo era el mundo en un momento determinado de la historia, mostrando la evolución de imperios o rutas comerciales antiguas.</p>
+                </div>
+                 <div class="map-type-item">
+                    <h3>Mapas Náuticos</h3>
+				<figure>
+                    <img src="./img/mapa_nautico.jfif" alt="Mapas Náuticos">
+				</figure>
+					<p>Cruciales para la navegación marítima, muestran profundidades del agua, ayudas a la navegación (boyas, faros), líneas de costa, características del fondo marino, y peligros. Utilizados por marinos y pescadores.</p>
+                </div>
+                 <div class="map-type-item">
+                    <h3>Cartas Aeronáuticas</h3>
+				<figure>
+                    <img src="./img/carta_aeronautica.jpg" alt="Cartas Aeronáuticas">
+				</figure>
+					<p>Diseñadas para la navegación aérea, muestran información relevante para pilotos, como aeropuertos, rutas aéreas, altitudes mínimas de seguridad, espacio aéreo controlado y ayudas a la navegación.</p>
+                </div>
+                 <div class="map-type-item">
+                    <h3>Mapas Catastrales</h3>
+				<figure>
+                    <img src="./img/mapa_Catastral.jpg" alt="Mapas Catastrales">
+				</figure>
+					<p>Muestran los límites de las propiedades de la tierra, la numeración de las parcelas, la ubicación de edificios y, a menudo, información sobre la propiedad y el valor de los terrenos. Esenciales para la gestión de la propiedad y los impuestos.</p>
+                </div>
+                <div class="map-type-item">
+                    <h3>Mapas de Uso del Suelo</h3>
+				<figure>
+                    <img src="./img/mapa_suelos.jpg" alt="Mapas de Uso del Suelo">
+				</figure>
+					<p>Representan cómo se utiliza el terreno (urbano, agrícola, forestal, industrial, recreativo, etc.) o qué tipo de vegetación lo cubre. Son fundamentales para la planificación territorial y la gestión ambiental.</p>
                 </div>
             </div>
         </section>
 
         <section id="interactivo">
             <h2>Explora un Mapa Interactivo</h2>
-            <p>Haz clic en el botón para ver el mapa.</p>
+            <p>Haz clic en el botón para ver un mapa interactivo.</p>
             <button id="mostrarMapaBtn">Mostrar Mapa</button>
-            <div id="contenedorMapa" style="margin-top: 20px; width: 100%; height: 400px; background-color: #e0e0e0; border: 1px solid #ccc; display: none;">
-                <p style="text-align: center; padding-top: 180px; font-style: italic; color: #555;">
-                    (mapa en proceso.)
+            <div id="contenedorMapa">
+                <p style="text-align: center; font-style: italic; color: #555;">
+                    Cargando mapa...
                 </p>
             </div>
             <p id="mensajeMapa" style="margin-top: 10px; font-weight: bold;"></p>
@@ -80,6 +154,6 @@
         <p>&copy; 2025 Cartografía</p>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/mi_javascr.js"></script>
 </body>
 </html>
