--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                  <div class="map-type-item">
                     <h3>Mapas Catastrales</h3>
 				<figure>
-                    <img src="./img/mapa_Catastral.jpg" alt="Mapas Catastrales">
+                    <img src="./img/mapa_castastral.jpg" alt="Mapas Catastrales">
 				</figure>
 					<p>Muestran los límites de las propiedades de la tierra, la numeración de las parcelas, la ubicación de edificios y, a menudo, información sobre la propiedad y el valor de los terrenos. Esenciales para la gestión de la propiedad y los impuestos.</p>
                 </div>
